--- a/.github/workflows/batch-test.yml
+++ b/.github/workflows/batch-test.yml
@@ -2,7 +2,7 @@ name: 🕐 Dooray에 hello 메시지 보내기
 
 on:
   schedule:
-    - cron: '*/1 * * * *'  # 🔁 매 1분마다 실행
+    - cron: '0 */10 * * *'  # 🔁 매 1분마다 실행
   workflow_dispatch:       # 🧪 수동 실행도 가능
 
 jobs:
