--- a/package.json
+++ b/package.json
@@ -4,5 +4,8 @@
     "scripts": {},
     "dependencies": {
         "dotenv": "^16.4.7"
+    },
+    "devDependencies": {
+        "@playwright/test": "^1.54.0"
     }
-  }
+}
