--- a/.github/workflows/batch-test.yml
+++ b/.github/workflows/batch-test.yml
@@ -2,7 +2,7 @@ name: 🕐 1시간마다 Playwright 테스트 & Dooray 알림 (Trace 포함)
 
 on:
   schedule:
-    - cron: '0 * * * *'
+    - cron: '0 3 1 * *'
   workflow_dispatch:
 
 jobs:
